force-app/main/default/objects/Session_Staff__c/Session_Staff__c.object-meta.xml
<CustomObject>
    <label>Session Staff</label>
    <nameField>
        <displayFormat>ERID-{00000}</displayFormat>
        <label>Event Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Staffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>