force-app/main/default/objects/Session_Staff__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Session Staffs</relationshipLabel>
    <relationshipName>Session_Staffs</relationshipName>
    <type>Lookup</type>
</CustomField>