force-app/main/default/objects/Session_Staff__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advancement and Alumni</fullName>
            </value>
            <value>
                <fullName>Careers and Employability</fullName>
            </value>
            <value>
                <fullName>Degree Apprenticeships</fullName>
            </value>
            <value>
                <fullName>Event Organiser</fullName>
            </value>
            <value>
                <fullName>External Speaker</fullName>
            </value>
            <value>
                <fullName>Faculty Staff</fullName>
            </value>
            <value>
                <fullName>Faculty Student Guides</fullName>
            </value>
            <value>
                <fullName>Front of House</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Communications</fullName>
            </value>
            <value>
                <fullName>Marketing Campaigns Team</fullName>
            </value>
            <value>
                <fullName>Postgraduate Recruitment Team</fullName>
            </value>
            <value>
                <fullName>Recruitment &amp; Outreach</fullName>
            </value>
            <value>
                <fullName>Student Ambassador</fullName>
            </value>
            <value>
                <fullName>Student Finance</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>