force-app/main/default/objects/Session_Staff__c/validationRules/Select_either_Contact_or_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_either_Contact_or_User</fullName>
    <active>true</active>
    <description>Select either User or a Contact but not both.</description>
    <errorConditionFormula>AND( NOT( ISBLANK( Contact__c ) ),  
      NOT( ISBLANK( User__c ) ) 
     )</errorConditionFormula>
    <errorMessage>You can select either UOP User or Contact. Not both</errorMessage>
</ValidationRule>